# aoc-2022

./: CMakeLists.txt  CMakePresets.json  new_day.py  vcpkg.json
aoc-2022/: CMakeLists.txt  regex.hpp  split.hpp
aoc-2022/day01/: day01.cpp
aoc-2022/day02/: day02.cpp
aoc-2022/day03/: day03.cpp
aoc-2022/day04/: day04.cpp
aoc-2022/day05/: day05.cpp
aoc-2022/day06/: day06.cpp
aoc-2022/day07/: day07.cpp
aoc-2022/day08/: day08.cpp
aoc-2022/day09/: day09.cpp
aoc-2022/day10/: day10.cpp
aoc-2022/day11/: day11.cpp
aoc-2022/day12/: day12.cpp  input.txt
aoc-2022/day13/: day13.cpp
aoc-2022/day14/: day14.cpp  input.txt
